--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body {
+body,
+html {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
